--- a/src/templates/navigation/navbar.html
+++ b/src/templates/navigation/navbar.html
@@ -11,7 +11,7 @@
   <div class="uppercase text-gray-400 mb-4">Main Menu</div>
 
   <!-- Dashboard Link -->
-  <a href="{% url 'dashboard' %}" class="flex items-center p-2 bg-[#6C4EF4] text-white rounded">
+  <a href="/dashboard/" class="flex items-center p-2 bg-[#6C4EF4] text-white rounded">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
       <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
     </svg>
@@ -27,7 +27,7 @@
   </a>
 
   <!-- Chat Link -->
-  <a href="{% url 'chat' %}" class="flex items-center p-2 mt-4 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
+  <a href="/chat/" class="flex items-center p-2 mt-4 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
       <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 9.75a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375m-13.5 3.01c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.184-4.183a1.14 1.14 0 0 1 .778-.332 48.294 48.294 0 0 0 5.83-.498c1.585-.233 2.708-1.626 2.708-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z" />
     </svg>
@@ -35,7 +35,7 @@
   </a>
 
   <!-- Mi Perfil Link -->
-  <a href="{% url 'profile' %}" class="flex items-center p-2 mt-4 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
+  <a href="/profile/" class="flex items-center p-2 mt-4 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
       <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
     </svg>
@@ -47,7 +47,7 @@
     <div class="uppercase text-gray-400 mb-4">Preferencias</div>
 
     <!-- Ajustes Link -->
-    <a href="{% url 'settings' %}" class="flex items-center p-2 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
+    <a href="/settings/" class="flex items-center p-2 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M11.42 15.17 17.25 21A2.652 2.652 0 0 0 21 17.25l-5.877-5.877M11.42 15.17l2.496-3.03c.317-.384.74-.626 1.208-.766M11.42 15.17l-4.655 5.653a2.548 2.548 0 1 1-3.586-3.586l6.837-5.63m5.108-.233c.55-.164 1.163-.188 1.743-.14a4.5 4.5 0 0 0 4.486-6.336l-3.276 3.277a3.004 3.004 0 0 1-2.25-2.25l3.276-3.276a4.5 4.5 0 0 0-6.336 4.486c.091 1.076-.071 2.264-.904 2.95l-.102.085m-1.745 1.437L5.909 7.5H4.5L2.25 3.75l1.5-1.5L7.5 4.5v1.409l4.26 4.26m-1.745 1.437 1.745-1.437m6.615 8.206L15.75 15.75M4.867 19.125h.008v.008h-.008v-.008Z" />
       </svg>
@@ -55,7 +55,7 @@
     </a>
 
      <!-- Ayuda y Soporte Link -->
-  <a href="{% url 'support' %}" class="flex items-center p-2 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
+  <a href="/support/" class="flex items-center p-2 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
       <path stroke-linecap="round" stroke-linejoin="round" d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z" />
     </svg>
@@ -63,7 +63,7 @@
   </a>
 
     <!-- Log Out Link -->
-    <a href="{% url 'logout' %}" class="flex items-center p-2 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
+    <a href="/logout" class="flex items-center p-2 text-[#6C4EF4] hover:bg-[#DED3F9] rounded">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 9V5.25A2.25 2.25 0 0 1 10.5 3h6a2.25 2.25 0 0 1 2.25 2.25v13.5A2.25 2.25 0 0 1 16.5 21h-6a2.25 2.25 0 0 1-2.25-2.25V15M12 9l3 3m0 0-3 3m3-3H2.25" />
       </svg>
