--- a/src/templates/projects/manage_milestone.html
+++ b/src/templates/projects/manage_milestone.html
@@ -3,39 +3,62 @@
 
 {% block app_content %}
 
-<div class="bg-white p-6 rounded-lg shadow-lg">
-    <h3 class="text-lg font-semibold text-primary_black">Añadir Hito</h3>
-    <form method="post">
-        {% csrf_token %}
-        <div class="mt-4">
-            <label for="name" class="block text-sm font-medium text-gray-700">Nombre</label>
-            <input id="name" name="name" type="text"
-                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
-                required>
-        </div>
-        <div class="mt-4">
-            <label for="description" class="block text-sm font-medium text-gray-700">Descripción</label>
-            <textarea id="description" name="description" rows="3"
-                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
-                required></textarea>
-        </div>
-        <div class="mt-4">
-            <label for="end_date" class="block text-sm font-medium text-gray-700">Descripción</label>
-            <input name="end_date" type="date" id="end_date"
-                class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
-                required>
-        </div>
+<div class="flex justify-center items-center h-screen">
 
-        <div id="start_date_div"></div>
+    <div class="flex flex-col mx-40 bg-bg_gray p-6 rounded-lg shadow-lg w-full h-full">
+        <h3 class="text-lg font-semibold text-primary_black">
+            {% if is_editing %}
+            Editar Hito
+            {% else %}
+            Añadir Hito
+            {% endif %}
+        </h3>
+        <form method="post">
+            {% csrf_token %}
+            <div class="mt-8">
+                <label for="name" class="block text-md font-medium text-primary_black">Nombre</label>
+                <input id="name" name="name" type="text" {% if is_editing %} value="{{milestone.name}}" {% endif %}
+                    class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
+                    required>
+            </div>
+            <div class="mt-8">
+                <label for="description" class="block text-md font-medium text-primary_black">Descripción</label>
+                <textarea id="description" name="description" rows="3"
+                    class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
+                    required>{% if is_editing %}{{milestone.description}} {% endif %}</textarea>
+                <!--Tener en cuenta que los espacios important en la text area -->
+            </div>
+            <div class="flex justify-between space-x-40 mt-8">
 
+                <div class="w-1/2">
+                    <label for="end_date" class="block text-md font-medium text-primary_black">Fecha de
+                        Finalizacion</label>
+                    <input name="end_date" type="date" id="end_date" {% if is_editing and milestone.end_date %}
+                        value="{{ milestone.end_date|date:'Y-m-d' }}" {% endif %}
+                        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
+                        required>
 
-        <div class="mt-4 flex justify-end">
-            <a href="/project/{{project_id}}/milestone">
-                <button type="button" class="bg-gray-300 text-gray-800 px-4 py-2 rounded-lg mr-2">Cancelar</button>
-            </a>
-            <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg">Guardar</button>
-        </div>
-    </form>
+                </div>
+
+                {% if is_editing %}
+                <div class="w-1/2">
+                    <label for="start_date" class="block text-md font-medium text-primary_black">Fecha de Inicio</label>
+                    <input name="start_date" type="date" {% if is_editing and milestone.end_date %}
+                        value="{{ milestone.start_date|date:'Y-m-d' }}" {%endif %}
+                        class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
+                        required>
+                </div>
+                {% endif %}
+            </div>
+
+            <div class="justify-end  items-center">
+                <a href="/project/{{project_id}}/milestone">
+                    <button type="button" class="bg-gray-300 text-gray-800 px-4 py-2 rounded-lg mr-2">Cancelar</button>
+                </a>
+                <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg">Guardar</button>
+            </div>
+        </form>
+    </div>
+
 </div>
-
 {% endblock %}
