--- a/src/templates/projects/manage_milestone.html
+++ b/src/templates/projects/manage_milestone.html
@@ -1,18 +1,43 @@
 {% extends "navigation/navigation.html" %}
 
 
+{% load static %}
 {% block app_content %}
+{{ project_id|json_script:"project-id" }}
 
 <div class="flex justify-center items-center h-screen">
 
     <div class="flex flex-col mx-40 bg-bg_gray p-6 rounded-lg shadow-lg w-full h-full">
-        <h3 class="text-lg font-semibold text-primary_black">
+        <div class="flex justify-between">
+            <h3 class="text-lg font-semibold text-primary_black">
+                {% if is_editing %}
+                Editar Hito
+                {% else %}
+                Añadir Hito
+                {% endif %}
+            </h3>
+
+
             {% if is_editing %}
-            Editar Hito
-            {% else %}
-            Añadir Hito
+            <a href="/project/delete_milestone/{{milestone.id}}" id="delete-button">
+                <button class="bg-red-600 rounded-lg p-1 px-2 text-white">Delete</button>
+            </a>
+
+            <!-- Modal -->
+            <div id="delete_confirmation"
+                class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden z-50">
+                <div class="bg-white rounded-lg p-4 w-80">
+                    <h3 class="text-lg mb-4">¿Estás seguro de borrar la tarea `{{milestone.name}}`?</h3>
+                    <div class="flex justify-end">
+                        <button id="confirm-button"
+                            class="bg-red-600 text-white px-4 py-2 rounded-lg">Confirmar</button>
+                        <button id="cancel-button" class="ml-2 bg-gray-300 px-4 py-2 rounded-lg">Cancelar</button>
+                    </div>
+                </div>
+            </div>
+
             {% endif %}
-        </h3>
+        </div>
         <form method="post">
             {% csrf_token %}
             <div class="mt-8">
@@ -59,6 +84,8 @@
             </div>
         </form>
     </div>
+
+    <script src="{% static 'js/project/manage_milestone.js' %}" type="text/javascript"></script>
 
 </div>
 {% endblock %}
