--- a/src/templates/projects/project_list.html
+++ b/src/templates/projects/project_list.html
@@ -1,13 +1,25 @@
-{% extends 'base.html' %}
+{% extends 'navigation/navigation.html' %}
 
-{% block content %}
+{% block app_content %}
+<div class="flex flex-row justify-between w-full mt-4 bg-bg_gray py-2 px-4 rounded-xl">
+    <div class="flex flex-row gap-2">
+        {% url 'available_projectsFreelancer' as project_main_view %}
+        {% include 'utils/anchor_button.html' with label='Disponibles' type=2 url=project_main_view %}
+        
+        {% url 'my_projects' as list_projects_available %}
+        {% include 'utils/anchor_button.html' with label='Mis Proyectos' type=1 url=list_projects_available %}
+    </div>
+    <div class="flex">
+        {% url 'create_project' as create_project_url %}
+        {% include 'utils/anchor_button.html' with label='Crear Proyecto' type=1 url=create_project_url %}
+    </div>
+</div>
+
 <div class="container mx-auto px-4 py-8">
     <div class="flex justify-between items-center mb-6">
         <h1 class="text-3xl font-bold">Mis Proyectos</h1>
-        <a href="{% url 'create_project' %}" class="bg-[#636AF2] text-white px-4 py-2 rounded-lg hover:bg-[#4F54D4] transition-colors">
-            Crear nuevo Proyecto
-        </a>
     </div>
+    
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         {% for project in projects %}
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
@@ -22,8 +34,8 @@
             </div>
         </div>
         {% empty %}
-        <p class="text-gray-500 col-span-3">No tienes pro.</p>
+        <p class="text-gray-500 col-span-3">No tienes proyectos.</p>
         {% endfor %}
     </div>
 </div>
-{% endblock %}
+{% endblock app_content %}
